[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlforecasting"
version = "0.1.0"
description = "Deep Learning Time Series Forecasting using RNN, LSTM, and GRU"
authors = [
    {name = "Asep Muhidin"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "joblib"
]